<resources>
    <string name="app_name" translatable="false">CoffeeHouse</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="Offers">Offers</string>
    <string name="Home">Home</string>
    <string name="Menu">Menu</string>
    <string name="Cart">Cart</string>
    <string name="Account">Account</string>
    <string name="Map">Map</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_theme_switch">To switch the theme</string>
    <string name="Users_name">User\'s name</string>
    <string name="Phone_number">Phone number</string>
    <string name="MyData">My data</string>
    <string name="Settings">App\'s settings</string>


    <string name="alert_title">No internet</string>
    <string name="alert_message">There is no internet connection, and no data is available locally. Please try again later :(</string>
    <string name="Okay">OK</string>

    <string name="addToCartDesc">Add item to cart</string>
    <string name="removeFromCartDesc">Delete item from cart</string>

    <string name="imageDescription">The image of item</string>
    <string name="makeAnOrder">Make an order</string>
    <string name="orders_history">Orders history</string>
    <string name="CartAlertDialogTitle">Too many items</string>
    <string name="CartAlertDialogMessage">We won\'t sell you that much. Choose something else.</string>
    <string name="item_quantity" translatable="false">x %d</string>
    <string name="cart_is_empty">Cart is empty</string>
    <string name="menu_load_error">Error loading menu</string>
    <string name="json_saved">JSON saved</string>
    <string name="json_loaded">JSON loaded</string>
    <string name="no_offline_data">No data for offline access</string>
    <string name="order_number">Order №%d</string>

    <!--    registration-->
    <string name="userLogin">Login</string>
    <string name="userEmail" translatable="false">Email</string>
    <string name="userPassword">Password</string>
    <string name="userConfirmPassword">Confirm Password</string>
    <string name="signUp">Sign Up</string>
    <string name="signIn">Sign In</string>

    <string name="passwordsDontMatch">Passwords don\'t match</string>
    <string name="fillAll">Fill all fields</string>
    <string name="loginShorter">Login has to be shorter</string>
    <string name="passwordLonger">Password has to be longer</string>

    <string name="regSuss">Registration successful</string>
    <string name="regErr">Registration Error</string>
    <string name="errDueReg">Error due registration</string>

    <string name="signInSuss">Registration successful</string>
    <string name="signInErr">Registration Error</string>
    <string name="errDuesignIn">Error due registration</string>
    <string name="orderSuccess">Order placed. Bonuses awarded: %d</string>
    <string name="orderErr">Order placing error</string>
    <string name="itemPrice" translatable="false">%d ₽</string>
</resources>