<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/buttons_block"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"

    android:layout_margin="20dp"
    android:layout_centerInParent="true">

    <EditText
        android:id="@+id/signInEmailEditText"
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:hint="@string/userEmail"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/signInPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:hint="@string/userPassword"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/signInButton"
        style="@style/Widget.CoffeeHouse.MaterialButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginVertical="16dp"
        android:text="@string/signIn"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an account?"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:id="@+id/toSignUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUp"
            android:textColor="@color/brown"/>

    </LinearLayout>
</LinearLayout>