<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    style="@style/Base.Theme.CoffeeHouse">

    <!-- User Name -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start|center_vertical"
        android:paddingBottom="16dp">
        <TextView
            android:id="@+id/loginViewed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userLogin"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- My Data Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MyData"
            android:textSize="15sp"
            android:textStyle="bold"
            android:paddingBottom="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingBottom="4dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Users_name"
                android:layout_weight="1" />
            <TextView
                android:id="@+id/userDataUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/userEmail"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/userDataEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingBottom="4dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Delivery address"
                android:layout_weight="1" />
            <TextView
                android:id="@+id/userDataDeliveryAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/editUserData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.CoffeeHouse.MaterialButton"
            android:text="Edit user data"/>
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="10dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/ordersHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.CoffeeHouse.MaterialButton"
            android:text="@string/orders_history"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/toSignUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.CoffeeHouse.MaterialButton"
        android:text="@string/signUp"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/toSignInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.CoffeeHouse.MaterialButton"
        android:text="@string/signIn"/>

</LinearLayout>
